<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_background"
    android:orientation="vertical" >

    <include layout="@layout/inc_common_title" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/view_12"
        android:paddingLeft="@dimen/view_16"
        android:paddingStart="@dimen/view_16"
        android:paddingRight="@dimen/view_7_5"
        android:paddingEnd="@dimen/view_7_5"
        android:paddingTop="@dimen/view_12"
        android:layout_marginTop="@dimen/pager_paddding">

        <ImageView
            android:id="@id/ivHead"
            android:layout_width="@dimen/view_50"
            android:layout_height="@dimen/view_50"
            android:contentDescription="@null"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/view_12"
            android:layout_marginStart="@dimen/view_12"
            android:layout_weight="1"
            android:orientation="vertical" >

            <!-- 预约学员 -->

            <LinearLayout style="@style/order_item_layout" >

                <TextView
                    style="@style/order_item_tv_1"
                    android:text="@string/student_name"
                    android:textSize="@dimen/text_medium_xx"/>

                <TextView
                    style="@style/order_item_tv_1"
                    android:text="@string/colon"
                    android:textSize="@dimen/text_medium_xx"/>

                <TextView
                    android:id="@id/student"
                    style="@style/order_item_tv_2"
                    android:textSize="@dimen/text_medium_xx"/>
            </LinearLayout>
            <!-- 报名时间 -->

            <!-- <LinearLayout style="@style/order_item_layout" >

                <TextView
                    style="@style/order_item_tv_1"
                    android:text="@string/apply_time"
                    android:textSize="@dimen/text_medium_xx"/>

                <TextView
                    style="@style/order_item_tv_1"
                    android:text="@string/colon"
                    android:textSize="@dimen/text_medium_xx"/>

                <TextView
                    android:id="@id/apply_time"
                    style="@style/order_item_tv_2"
                    android:textSize="@dimen/text_medium_xx"/>
            </LinearLayout> -->
            <!-- 报名分校 -->

            <LinearLayout style="@style/order_item_layout" >

                <TextView
                    style="@style/order_item_tv_1"
                    android:text="@string/apply_school"
                    android:textSize="@dimen/text_medium_xx"/>

                <TextView
                    style="@style/order_item_tv_1"
                    android:text="@string/colon"
                    android:textSize="@dimen/text_medium_xx"/>

                <TextView
                    android:id="@id/school"
                    style="@style/order_item_tv_2"
                    android:textSize="@dimen/text_medium_xx"/>
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:src="@drawable/phone"
            android:contentDescription="@null" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:dividerPadding="@dimen/view_4"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_marginTop="@dimen/pager_paddding"
        android:showDividers="middle" >

        <!-- 培训课程 -->

        <LinearLayout
            style="@style/order_activity_layout_1"
            >

            <TextView
                style="@style/order_activity_tv_1"
                android:text="@string/training_course" />

            <TextView
                android:id="@id/course"
                style="@style/order_activity_tv_2"/>
            
        </LinearLayout>

        <!-- 预约时间 -->

        <LinearLayout style="@style/order_activity_layout_1" >

            <TextView
                style="@style/order_activity_tv_1"
                android:text="@string/order_time" />

            <TextView
                android:id="@id/time"
                style="@style/order_activity_tv_2"/>
            
        </LinearLayout>
        
        <!-- 学时 -->

        <LinearLayout
            style="@style/order_activity_layout_1">

            <TextView
                style="@style/order_activity_tv_1"
                android:text="@string/training_period" />

            <TextView
                android:id="@id/period"
                style="@style/order_activity_tv_2"
                />
            
        </LinearLayout>
        
        <!-- 费用 -->

        <LinearLayout
            style="@style/order_activity_layout_1">


            <TextView
                style="@style/order_activity_tv_1"
                android:text="@string/training_fee" />

            <TextView
                android:id="@id/fee"
                style="@style/order_activity_tv_2"/>
            
        </LinearLayout>
        
        <!-- 车辆 -->

        <LinearLayout
            style="@style/order_activity_layout_1"
            android:divider="@drawable/divider_5"
            android:showDividers="middle" >

            <TextView
                style="@style/order_activity_tv_1"
                android:text="@string/training_car" />

            <TextView
                android:id="@id/carno"
                style="@style/order_activity_tv_2"
                android:layout_marginLeft="@dimen/view_10"
                android:layout_marginStart="@dimen/view_10"/>

            <TextView
                android:id="@id/_name"
                style="@style/order_activity_tv_2"
                />

            <TextView
                android:id="@id/gear_type"
                style="@style/order_activity_tv_2" />
            
        </LinearLayout>

        
    </LinearLayout>

    <Button
        android:id="@id/back"
        style="@style/ButtonBlue"
        android:layout_marginLeft="@dimen/view_12"
        android:layout_marginStart="@dimen/view_12"
        android:layout_marginEnd="@dimen/view_12"
        android:layout_marginRight="@dimen/view_12"
        android:layout_marginTop="@dimen/view_20"
        android:text="@string/back" />

</LinearLayout>