<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/item_hist_order_bg"
              android:baselineAligned="false"
              android:gravity="center_vertical"
              android:orientation="horizontal"
    >

    <ImageView
        android:id="@id/ivHead"
        android:layout_width="@dimen/view_50"
        android:layout_height="@dimen/view_50"
        android:contentDescription="@null"
        android:visibility="gone"/>

    <LinearLayout
        style="@style/order_item_layout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/view_130"
        android:layout_marginLeft="@dimen/view_10"
        android:gravity="center"
        android:orientation="vertical"
        >

        <!--<TextView-->
        <!--style="@style/order_item_tv_1"-->
        <!--android:text="@string/time"/>-->

        <!--<TextView-->
        <!--style="@style/order_item_tv_1"-->
        <!--android:text="@string/colon"/>-->

        <TextView
            android:id="@id/time"
            style="@style/order_item_tv_2"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2017-01-19"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/text_medium_xxx"
            />

        <TextView
            android:id="@+id/tv_time_long"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_10"
            android:text="8:00-9:00"
            android:textColor="@color/app_color"
            android:textSize="@dimen/text_large"
            />

        <TextView
            android:id="@+id/tv_time_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_10"
            android:text="1小时"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/text_large"
            />

    </LinearLayout>

    <View
        android:layout_marginTop="@dimen/view_15"
        android:layout_marginBottom="@dimen/view_15"
        android:layout_marginLeft="@dimen/view_10"
        android:layout_width="@dimen/view_0.5"
        android:layout_height="match_parent"
        android:background="@color/gray_D2D2D2"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/view_130"
        android:layout_marginLeft="@dimen/view_15"
        android:layout_marginStart="@dimen/view_15"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                style="@style/order_item_tv_1"
                android:text="@string/time"/>

            <TextView
                style="@style/order_item_tv_1"
                android:text="@string/colon"/>

            <TextView
                android:id="@id/time"
                style="@style/order_item_tv_2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/order_item_tv_1"
                        android:text="@string/student"
                        android:textSize="@dimen/text_large"/>

                    <TextView
                        style="@style/order_item_tv_1"
                        android:text="@string/colon"
                        android:textSize="@dimen/text_large"/>

                    <TextView
                        android:id="@id/student"
                        style="@style/order_item_tv_2"
                        android:textSize="@dimen/text_large"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_10"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/order_item_tv_1"
                        android:text="@string/course"
                        android:textSize="@dimen/text_large"/>

                    <TextView
                        style="@style/order_item_tv_1"
                        android:text="@string/colon"
                        android:textSize="@dimen/text_large"/>

                    <TextView
                        android:id="@id/course"
                        style="@style/order_item_tv_2"
                        android:textSize="@dimen/text_large"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/order_item_layout"
                    android:layout_marginTop="@dimen/view_10"
                    >

                    <TextView
                        style="@style/order_item_tv_1"
                        android:text="@string/car"
                        android:textSize="@dimen/text_large"/>

                    <TextView
                        style="@style/order_item_tv_1"
                        android:text="@string/colon"
                        android:textSize="@dimen/text_large"/>

                    <TextView
                        android:id="@id/carno"
                        style="@style/order_item_tv_2"
                        android:textSize="@dimen/text_large"/>
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_more"
                android:contentDescription="@null"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>