<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_background"
    android:orientation="vertical" >

    <include layout="@layout/inc_common_title" />

    <View
        style="@style/divider"
        android:layout_marginTop="@dimen/pager_paddding"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@id/llPersonInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/pager_paddding" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@id/ivHead"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@null"
                android:src="@drawable/img_def_head" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_5"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <RatingBar
                    android:id="@+id/rating_bar"
                    style="@style/rating_bar_small"
                    android:isIndicator="true" />

                <TextView
                    android:id="@+id/tvEval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/view_5"
                    android:layout_marginStart="@dimen/view_5"
                    android:textColor="@color/yellow_FEB53F"
                    android:textSize="@dimen/text_medium_x" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/pager_paddding"
            android:layout_marginStart="@dimen/pager_paddding"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_medium_xxx" />

            <TextView
                android:id="@id/tvPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_5"
                android:textColor="@color/gray_999999"
                android:textSize="@dimen/text_medium_xxx" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_5"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/order_times"
                    android:textColor="@color/gray_999999"
                    android:textSize="@dimen/text_medium_xxx" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/colon"
                    android:textColor="@color/gray_999999"
                    android:textSize="@dimen/text_medium_xxx" />

                <TextView
                    android:id="@+id/tvOrderTimes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text_medium_xxx" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/order"
                    android:textColor="@color/gray_666666"
                    android:textSize="@dimen/text_medium_xxx" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        style="@style/divider"
        android:visibility="invisible" />

    <View
        style="@style/divider"
        android:layout_marginTop="@dimen/pager_paddding"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="@dimen/about_menu_height"
        android:orientation="horizontal"
        android:padding="@dimen/pager_paddding" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/about_person_info_height"
            android:text="@string/branch_school"
            android:textColor="@color/gray_999999"
            android:textSize="@dimen/text_medium_xxx" />

        <TextView
            android:id="@+id/tvSchool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/about_person_info_height"
            android:textColor="@color/gray_666666"
            android:textSize="@dimen/text_medium_xxx" />
    </LinearLayout>

    <View
        style="@style/divider"
        android:visibility="invisible" />

</LinearLayout>